// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders alert with zIndex correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
        "zIndex": 99,
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders custom alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders custom alert with cancel correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={1}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
      <CancelButton
        imageSrc={
          Object {
            "testUri": "../../../assets/cancel.png",
          }
        }
        imageStyle={
          Object {
            "alignSelf": "center",
            "height": 36,
            "padding": 8,
            "width": 36,
          }
        }
        onPress={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "height": 36,
            "padding": 8,
            "width": 36,
          }
        }
      />
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders error alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders info alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders success alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders warn alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "elevation": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -100,
          },
        ],
      },
      null,
    ]
  }
>
  <TouchableOpacity
    accessible={false}
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <Component
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "backgroundColor": "#202020",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <TextView
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text=""
          />
          <TextView
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text=""
          />
        </Component>
      </SafeAreaView>
    </Component>
  </TouchableOpacity>
</AnimatedComponent>
`;
